Se creo lo necesario para para la tabla <projects> con lo aprendido

--- a/views/addUser.twig
+++ b/views/addUser.twig
@@ -7,7 +7,7 @@
 		{{responseMessage}}
 	</div>
 
-	<form action="/user/add" class="for-control" method="post" enctype="multipart/form-data">
+	<form action="/users/add" class="for-control" method="post" enctype="multipart/form-data">
 		<label for="email">email:
 		</label>
 		<input class="for-control" type="email" name="email" id="email">
