--- a/views/index.twig
+++ b/views/index.twig
@@ -29,17 +29,23 @@
 		<div class="col">
 			<div>
 				<h3 class="border-bottom-gray">Work Experience</h3>
-				<ul>
-					{% for job in jobs %}
-						<img src="{{ job.img }}" alt="">
-						<li class="work-position">
+
+				{% for job in jobs %}
+
+					<div class="row work-position">
+						<div class="col-3">
+							<img src="{{ job.getImg(job.title) }}" alt="" class="img-thumbnail">
+						</div>
+						<div class="col">
 							<h5>
 								{{ job.title }}
 							</h5>
-						</li>
-						<p>{{ job.description }}</p>
-					{% endfor %}
-				</ul>
+							<p>{{ job.description }}</p>
+						</div>
+					</div>
+
+				{% endfor %}
+
 			</div>
 			<div>
 				<h3 class="border-bottom-gray">Projects</h3>
@@ -59,7 +65,7 @@
 						</div>
 						<div class="col">
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum corporis at
-																								                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    accusamus quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum			                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    quam cupiditate assumenda natus maiores aperiam.</p>
+																																																																																								                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    accusamus quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum			                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    quam cupiditate assumenda natus maiores aperiam.</p>
 							<strong>Technologies used:</strong>
 							<span class="badge badge-secondary">PHP</span>
 							<span class="badge badge-secondary">HTML</span>
@@ -75,8 +81,8 @@
 						</div>
 						<div class="col">
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius earum corporis at
-						                                                                                                                                                                                                                                                                                                                                                                                                                                                                accusamus quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum,
-																								                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         quam cupiditate assumenda natus maiores aperiam.</p>
+																																																																						                                                                                                                                                                                                                                                                                                                                                                                                                                                                accusamus quisquam hic quos vel? Tenetur, ullam veniam consequatur esse quod cum,
+																																																																																								                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         quam cupiditate assumenda natus maiores aperiam.</p>
 							<strong>Technologies used:</strong>
 							<span class="badge badge-secondary">PHP</span>
 							<span class="badge badge-secondary">HTML</span>
